# colordom

./: .rubocop.yml  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  colordom.gemspec
.github/workflows/: build.yml  cross-compile.yml
ext/colordom/: Cargo.toml  extconf.rb
ext/colordom/src/: lib.rs
lib/: colordom.rb
lib/colordom/: color.rb  error.rb  image.rb  native.rb  result.rb  version.rb
src/: lib.rs
test/: colordom_test.rb  test_helper.rb
